--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   numberpicker: ^2.1.2
   pinput: ^4.0.0
   intl_phone_field: ^3.1.0
+  custom_radio_grouped_button: ^2.2.1
+
 
 
 dev_dependencies:
